--- a/intro.tex
+++ b/intro.tex
@@ -246,4 +246,18 @@ Abel Soares Siqueira}
   \pgfuseimage{profilelog}<2>
 }
 
+\begin{frame}[fragile]
+  \verb+https://github.com/abelsiqueira/introduction-to-performance-profile+
+  \pgfdeclareimage[width=0.1\textwidth]{cc}{cc.large}
+  \pgfdeclareimage[width=0.1\textwidth]{by}{by.large}
+  \pgfdeclareimage[width=0.1\textwidth]{sa}{sa.large}
+  \begin{center}
+    \pgfuseimage{cc} 
+    \hspace{0.5cm}
+    \pgfuseimage{by}
+    \hspace{0.5cm}
+    \pgfuseimage{sa}
+  \end{center}
+\end{frame}
+
 \end{document}
