Add dfopt github link

--- a/intro.tex
+++ b/intro.tex
@@ -231,13 +231,17 @@ Abel Soares Siqueira}
   \end{itemize}
 }
 
-\myframe{
+\begin{frame}[fragile]
   Um exemplo mais avançado. Implementamos
   \begin{itemize}
     \item<2-> Método de Busca Direcional (Direct Search)
     \item<3-> Método Nelder-Mead (Nelmer-Mead)
   \end{itemize}
-}
+  \pause \pause \pause
+  \begin{center}
+  \verb+https://github.com/abelsiqueira/dfopt+
+  \end{center}
+\end{frame}
 
 \myframe{
   \pgfdeclareimage[width=0.95\textwidth]{profile}{tests/profile}
